# Kite2D

./: CMakeLists.txt  Readme.md  Readme.txt
src/: CMakeLists.txt
src/KHParser/: khparser.cpp  mmhash3.cpp
src/Kite/Assist/: kvertexvector.cpp
src/Kite/Assist/flash/: kflashio.cpp
src/Kite/Assist/graphic/: kanime.cpp  kanimeclip.cpp  kanimecontroller.cpp  kanimecontrollergroup.cpp  kanimeio.cpp  karraybatch.cpp  karraybatchobject.cpp  katlas.cpp  katlasio.cpp  kbatch.cpp  kbatchobject.cpp  kcamera.cpp  kdrawable.cpp  kflashio.cpp  kindexbatch.cpp  kindexbatchobject.cpp  kline.cpp  kparticleemitter.cpp  kquad.cpp  ktext.cpp  ktransformable.cpp  ktransformablegroup.cpp  kvertexvector.cpp
src/Kite/Assist/map/: kmapio.cpp  ktilemap.cpp  ktilesheet.cpp
src/Kite/Core/: CMakeLists.txt  kcomponent.cpp  kcoredef.cpp  kcoreinstance.cpp  kcorestructs.cpp  kcoretypes.cpp  kcoreutil.cpp  kentity.cpp  kentitymanager.cpp  kfistream.cpp  kfostream.cpp  kistream.cpp  klistener.cpp  kmessage.cpp  kmessenger.cpp  kostream.cpp  kprefab.cpp  kresource.cpp  kresourcemanager.cpp  kscene.cpp  kscenemanager.cpp  ksystem.cpp
src/Kite/Core/BSP/: kgridbsp.cpp  kmapio.cpp
src/Kite/Core/audio/: CMakeLists.txt  alcall.cpp  alcall.h  audioformatio.h  klistener.cpp  ksoundbuffer.cpp  ksoundsource.cpp  kstaticsource.cpp  kstreamsource.cpp  oggio.cpp  oggio.h  soundio.cpp  soundio.h
src/Kite/Core/continers/: kpodpool.cpp
src/Kite/Core/gameplay/: CMakeLists.txt  kcomponent.cpp  kentity.cpp  kmessage.cpp  kmessenger.cpp
src/Kite/Core/graphic/: glcall.cpp  glcall.h  imageio.cpp  imageio.h  kanimeclip.cpp  kanimecontroller.cpp  kanimecontrollergroup.cpp  katlas.cpp  kbatchobject.cpp  kcamera.cpp  kframebuffer.cpp  kgl2drender.cpp  kglrender.cpp  kgraphicstructs.cpp  kgraphicutil.cpp  kimage.cpp  kquad.cpp  krender.cpp  kshader.cpp  kshaderprogram.cpp  ktext.cpp  ktexture.cpp  ktransform.cpp  kvertexarray.cpp  kvertexbuffer.cpp
src/Kite/Core/input/: CMakeLists.txt  kjoystick.cpp  kkeyboard.cpp  kmouse.cpp
src/Kite/Core/math/: kgeometric.cpp  kinterpolate.cpp  ktransform.cpp  ktransformable.cpp
src/Kite/Core/memory/: CMakeLists.txt  klinearallocator.cpp  kphysicalstorage.cpp  kpoolstorage.cpp  kstackallocator.cpp  kstackstorage.cpp
src/Kite/Core/meta/: CMakeLists.txt  kmetaclass.cpp  kmetaenum.cpp  kmetamanager.cpp  kmetaobject.cpp  kmetapod.cpp
src/Kite/Core/physique/: kpointinpoly.cpp
src/Kite/Core/serialization/: kbaseserial.cpp  kbinaryserial.cpp
src/Kite/Core/system/: CMakeLists.txt  kcoreinstance.cpp  kmemstream.cpp  kmutex.cpp  kobject.cpp  kresource.cpp  ksystemutil.cpp  kthread.cpp  ktimer.cpp
src/Kite/Core/utility/: karchive.cpp  karchivestream.cpp  kbytesarray.cpp  kfileinputstream.cpp  kfileostream.cpp  kfilestream.cpp  kfpsfixer.cpp  kgridbsp.cpp  klayersort.cpp  kmapio.cpp  kmeminputstream.cpp  kmemorystream.cpp  kmeta.cpp  kmetaclass.cpp  kmetaenum.cpp  kmetamanager.cpp  kmetaobject.cpp  kmetapod.cpp  kresourcemanager.cpp  kserialize.cpp  ktimer.cpp  zipio.cpp  zipio.h
src/Kite/Core/window/: CMakeLists.txt  fwcall.cpp  fwcall.h  kglmwindow.cpp  kglwindow.cpp  kwindowutil.cpp  sdlcall.cpp  sdlcall.h
src/Kite/Engine/startup/: KRegistery.cpp
src/Kite/audio/: CMakeLists.txt  alcall.cpp  alcall.h  audioformatio.h  klistener.cpp  ksoundbuffer.cpp  ksoundsource.cpp  kstaticsource.cpp  kstreamsource.cpp  soundio.cpp  soundio.h
src/Kite/audio/tp/: CWaves.cpp
src/Kite/audio/win32/: waveio.cpp  waveio.h
src/Kite/bsp/: CMakeLists.txt  kbspsys.cpp  klayersort.cpp  kspatialhash.cpp
src/Kite/ecs/: CMakeLists.txt  kcomponent.cpp  kecsstructs.cpp  kecstypes.cpp  kentity.cpp  klistener.cpp  kmessage.cpp  kmessenger.cpp  knode.cpp  kprefab.cpp  kresource.cpp  kresourcemanager.cpp  kscene-temp.cpp  kscene.cpp  ksystem.cpp
src/Kite/engine/: CMakeLists.txt  kengine.cpp
src/Kite/graphic/: CMakeLists.txt  glcall.cpp  glcall.h  imageio.cpp  imageio.h  kanimecontroller.cpp  katlas.cpp  katlasimage.cpp  katlastexture.cpp  katlastexturearray.cpp  kbatch.cpp  kbitmaptextcom.cpp  kcamera.cpp  kcameracom.cpp  kframebuffer.cpp  kgcullingcom.cpp  kgcullingsys.cpp  kgl2drender.cpp  kglrender.cpp  kgraphicstructs.cpp  kgraphictypes.cpp  kgraphicutil.cpp  kimage.cpp  kline.cpp  korthogonalmap.cpp  korthomapcom.cpp  korthotilestamp.cpp  kparticleemitter.cpp  kquadcom.cpp  kreggcullingcom.cpp  krender.cpp  krendercom.cpp  krendersys.cpp  kshader.cpp  kshaderprogram.cpp  ktexture.cpp  ktransform.cpp  ktransformablegroup.cpp  kvertexarray.cpp  kvertexbuffer.cpp
src/Kite/input/: CMakeLists.txt  kinputcom.cpp  kinputsys.cpp  kinputtypes.cpp  kjoystick.cpp  kkeyboard.cpp  kmouse.cpp
src/Kite/khparser/: khparser.cpp
src/Kite/logic/: CMakeLists.txt  klogiccom.cpp  klogicinstancecom.cpp  klogicsys.cpp  kreglogiccom.cpp  kscript.cpp
src/Kite/math/: CMakeLists.txt  kgeometric.cpp  kmathstructs.cpp  kmathtypes.cpp  kmatrix3.cpp  ktransform.cpp  ktransformable.cpp  ktransformcom.cpp  ktransformsys.cpp
src/Kite/memory/: CMakeLists.txt  kfreeliststorage.cpp  klinearstorage.cpp  kphysicalstorage.cpp  kpoolstorage.cpp  kproxystorage.cpp  kstackstorage.cpp
src/Kite/meta/: CMakeLists.txt  kcommanager.khgen.h  kcomponent.khgen.h  kentity.khgen.h  kgraphicstructs.khgen.h  kitemeta.khgen.cpp  kitemeta.khgen.h  kmessage.khgen.h  kmessagehandler.khgen.h  kmessenger.khgen.h  kmeta.khgen.cpp  kmeta.khgen.h  kmetabase.cpp  kmetaclass.cpp  kmetaenum.cpp  kmetamanager.cpp  kmetaobject.cpp  kmetapod.cpp
src/Kite/serialization/: CMakeLists.txt  kbaseserial.cpp  kbinaryserial.cpp
src/Kite/stream/: CMakeLists.txt  karchivestream.cpp  kfilestream.cpp  kiostream.cpp  kstreamstructs.cpp  kstreamtypes.cpp  zipio.cpp  zipio.h
src/Kite/system/: kmutex.cpp  kseqio.cpp  ksystemutil.cpp  kthread.cpp  ktimer.cpp
src/Kite/utility/: karchiveistream.cpp  karchiveostream.cpp  karchivestream.cpp  kfileistream.cpp  kfpsfixer.cpp  kmemorystream.cpp  ktimer.cpp
src/Kite/window/: CMakeLists.txt  kglmwindow.cpp  kglwindow.cpp  kwindowstructs.cpp  kwindowutil.cpp  sdlcall.cpp  sdlcall.h
src/Test/: main - Copy.cpp  main.cpp
(+558 files in other folders)
